# war_of_ages

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  config.txt
.github/workflows/: ci.yml
client/: CMakeLists.txt
client/configs/: bot_config.txt  client_config.txt  woa_client_version.h.in
client/include/: actions_receiver.h  actions_supplier.h  animation_handler.h  animation_supplier.h  application.h  background_handler.h  bot.h  bot_actions_receiver.h  bot_actions_supplier.h  chat_handler.h  client.h  client_bullet.h  client_cannon.h  client_unit.h  end_game_screen.h  game_handler.h  game_object_size_constants.h  game_screen.h  menu_background.h  multiplayer_screen.h  multiplayer_snapshots_handler.h  network_actions_receiver.h  pause_screen.h  player_actions_receiver.h  player_actions_supplier.h  printable_tournament.h  room_handler.h  screen_defines.h  screen_handler.h  screens.h  settings_screen.h  sfml_printer.h  single_player_handler.h  sound_player.h  sprite_printer.h  sprite_supplier.h  start_screen.h  tournament.h  tournament_handler.h  tournament_page.h  (+3 more)
client/include/screens/: game_screen.h  settings_screen.h  start_screen.h  tournament_screens.h  wait_screen.h
client/resources/tgui_themes/: settings_icon.txt  theme.txt
client/src/: animation_handler.cpp  animation_supplier.cpp  application.cpp  background_handler.cpp  bot.cpp  bot_actions_receiver.cpp  bot_actions_supplier.cpp  chat_handler.cpp  client.cpp  client_bullet.cpp  client_cannon.cpp  client_unit.cpp  end_game_screen.cpp  game_handler.cpp  game_screen.cpp  main.cpp  menu_background.cpp  multiplayer_screen.cpp  multiplayer_snapshots_handler.cpp  network_actions_receiver.cpp  pause_screen.cpp  player_actions_receiver.cpp  player_actions_supplier.cpp  printable_tournament.cpp  room_handler.cpp  screen_handler.cpp  screens.cpp  settings_screen.cpp  sfml_printer.cpp  single_player_handler.cpp  sound_player.cpp  sprite_printer.cpp  sprite_supplier.cpp  start_screen.cpp  tournament.cpp  tournament_handler.cpp  tournament_page.cpp  tournament_screens.cpp  ui_functions.cpp  wait_screen.cpp
client/src/screens/: background.cpp  end_game_screen.cpp  game_screen.cpp  login_screen.cpp  multiplayer_screen.cpp  room_screen.cpp  settings_screen.cpp  start_screen.cpp  statistics_screen.cpp  tournament_screens.cpp  wait_for_server_screen.cpp  wait_screen.cpp
common/: CMakeLists.txt
common/configs/: key.txt
common/game_logic/include/: age.h  bullet.h  cannon.h  game_commands.h  game_constants.h  game_state.h  player.h  unit.h
common/game_logic/src/: bullet.cpp  cannon.cpp  game_commands.cpp  game_state.cpp  player.cpp  unit.cpp  vec2f.cpp
common/include/: messages_type.h  woa_time.h
common/network/include/: client_interface.h  connection.h  connection_fwd.h  message.h  network.h  server_interface.h  thread_safe_deque.h
common/tournament/include/: tournament.h
common/tournament/source/: tournament.cpp
game_logic/include/: age.h  bullet.h  cannon.h  game_commands.h  game_constants.h  game_state.h  player.h  unit.h  vec2f.h
game_logic/src/: bullet.cpp  cannon.cpp  game_commands.cpp  game_state.cpp  player.cpp  unit.cpp  vec2f.cpp
network/include/: client_interface.h  connection.h  connection_fwd.h  message.h  network.h  server_fwd.h  server_interface.h  thread_safe_deque.h
server/: CMakeLists.txt
server/configs/: woa_server_version.h.in
server/include/: bullet.h  cannon.h  chat.h  chat_handler.h  database_handler.h  game.h  game_commands.h  game_constants.h  game_handler.h  game_state.h  player.h  random_matchmaker.h  room_matchmaker.h  server.h  server_bullet.h  server_cannon.h  server_tournament.h  server_unit.h  tournament.h  tournament_handler.h  unit.h
server/src/: bullet.cpp  cannon.cpp  chat.cpp  chat_handler.cpp  database_handler.cpp  game.cpp  game_handler.cpp  game_state.cpp  main.cpp  player.cpp  random_matchmaker.cpp  room_matchmaker.cpp  server.cpp  server_bullet.cpp  server_cannon.cpp  server_tournament.cpp  server_unit.cpp  tournament.cpp  tournament_handler.cpp  tournamet_handler.cpp  unit.cpp
